--- a/week11.html
+++ b/week11.html
@@ -21,19 +21,19 @@
                 <table class="table table-border" id="roster">
                     <tbody>
                       <tr>
-                        <td scope="col" id="sq1" onclick="selectSquare()">♦️</td>
-                        <td scope="col" id="sq2">♦️</td>
-                        <td scope="col" id="sq3">♦️</td>
+                        <td scope="col" id="sq0" onclick="selectSquare(0)">♦️</td>
+                        <td scope="col" id="sq1" onclick="selectSquare(1)">♦️</td>
+                        <td scope="col" id="sq2" onclick="selectSquare(2)">♦️</td>
                       </tr>
                       <tr>
-                        <td scope="col" id="sq4">♦️</td>
-                        <td scope="col" id="sq5">♦️</td>
-                        <td scope="col" id="sq6">♦️</td>
+                        <td scope="col" id="sq3" onclick="selectSquare(3)">♦️</td>
+                        <td scope="col" id="sq4" onclick="selectSquare(4)">♦️</td>
+                        <td scope="col" id="sq5" onclick="selectSquare(5)">♦️</td>
                       </tr>
                       <tr>
-                        <td scope="col" id="sq7">♦️</td>
-                        <td scope="col" id="sq8">♦️</td>
-                        <td scope="col" id="sq9">♦️</td>
+                        <td scope="col" id="sq6" onclick="selectSquare(6)">♦️</td>
+                        <td scope="col" id="sq7" onclick="selectSquare(7)">♦️</td>
+                        <td scope="col" id="sq8" onclick="selectSquare(8)">♦️</td>
                       </tr>
                     </tbody>
                     <tbody 
