final version of the game

--- a/week11.html
+++ b/week11.html
@@ -17,6 +17,7 @@
                   <text id="message">
                     Message
                   </text>
+                  <button class="btn btn-primary" id="reset" onClick="resetGame()">Reset Game</button>
                 </h2>
                 <table class="table table-border" id="roster">
                     <tbody>
