--- a/week11.html
+++ b/week11.html
@@ -19,6 +19,7 @@
                   </text>
                   <button class="btn btn-primary" id="reset" onClick="resetGame()">Reset Game</button>
                 </h2>
+                <h3 id="turn"></h3>
                 <table class="table table-border" id="roster">
                     <tbody>
                       <tr>
